[package]
name = "extendable-enums-helpers"
license = "MIT"
version = "0.1.0"
edition = "2021"
description = "Helper functions for extendable-enums because they can not be re-exported in a proc-macro package."
repository = "https://github.com/Rafaeltheraven/extendable-enums-helpers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0.18"
quote = "1.0.28"
proc-macro2 = "1.0.59"
